@@ -3,4 +3,4 @@ Sequence: 6000
 Version: 1.0
 Description: Test for license field referencing header
 Test-For:
- dep5-file-paragraph-reference-header-paragraph
+ dep5-file-paragraph-references-header-paragraph
