@@ -1,1 +1,1 @@
-W: source-copyright-license-header source: dep5-file-paragraph-reference-header-paragraph public-domain (paragraph at line 13)
+W: source-copyright-license-header source: dep5-file-paragraph-references-header-paragraph public-domain (paragraph at line 13)
