@@ -1,4 +1,4 @@
 W: source-copyright-unique source: dep5-copyright-license-name-not-unique (paragraph at line 27)
 W: source-copyright-unique source: dep5-copyright-license-name-not-unique (paragraph at line 32)
 W: source-copyright-unique source: dep5-copyright-license-name-not-unique (paragraph at line 35)
-W: source-copyright-unique source: dep5-file-paragraph-reference-header-paragraph some-license (paragraph at line 8)
+W: source-copyright-unique source: dep5-file-paragraph-references-header-paragraph some-license (paragraph at line 8)
