@@ -2,6 +2,8 @@ lintian (2.5.36) UNRELEASED; urgency=medium
 
   XXX: generate tag summary with private/generate-tag-summary
 
+  * checks/files.desc:
+    + [BR] Correct a few typos.  (Closes: #794953).
   * checks/scripts.desc:
     + [BR] Detect suspicious use of ln -s that could be replaced by
       dpkg-maintscript-helper.
